# Manual-Rag-Without-Langchain

./: advanced.py  main.py  pyproject.toml  q.txt
artifacts/: bm25_tokens.json  chunks.json  embeddings.npy  hashes.json  meta.json
data/: bm25_basics.txt  citations_guidelines.txt  evaluation.txt  faiss_tuning.txt  hybrid_retrieval.txt  vector_databases.txt
