[project]
name = "aslirag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0.post1",
    "google-generativeai>=0.8.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "rank-bm25>=0.2.2",
]
